samples/_failures_safe/1761348012_3b77e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6bc168d4.c: In function ‘main’:
./samples/SAFE/__tmp_6bc168d4.c:158:44: error: missing terminating ' character
  158 |         'E', 'F', 'F', 'G', 'H', 'H', 'H', 'H
      |                                            ^~
./samples/SAFE/__tmp_6bc168d4.c:158:9: error: expected expression at end of input
  158 |         'E', 'F', 'F', 'G', 'H', 'H', 'H', 'H
      |         ^~~
./samples/SAFE/__tmp_6bc168d4.c:158:9: error: expected declaration or statement at end of input
